# Rasp_modular

src/proyecto_modula/: frames_2026-04-10_17.07.50.gv  package.xml  setup.cfg  setup.py
src/proyecto_modula/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/proyecto_modula/launch/: algoritmo.launch.py  mapeo.launch.py  movimiento_inicial.launch.py  test_linea.launch.py
src/proyecto_modula/maps/: mapa_proyecto.pgm  mapa_proyecto.yaml  mapa_simulacion.pgm  mapa_simulacion.yaml
src/proyecto_modula/proyecto_modula/: .cortador.py.swp  linea_recta.py  master_controller.py  movimiento-aspirador.py  movimiento_aspirador.py
